# nova

./: Cargo.toml  README.md  flake.nix
examples/: actor.nova  algebraic_fx.nova  chat.nova  compiler.nova  http.nova  implicit_context.nova  unwrap.nova  weather_fx.nova  weather_wrap.nova  weather_wrap_syntax2.nova
examples/json_parser/: json_comptime.nova  json_parser.nova  json_parser_expr.nova
examples/layout/: layout.nova
examples/todo/: error.nova  file.nova  lib.nova  list.nova  optional.nova  todo.nova
ideas/: adaptive_memory_management.md  algebraic_effectsish.md  automatic_ctx_passing.md  big_problems.md  context_patterns.md  context_variables.md  function_syntax.md  golang_compilation.md  implicit_handlers.md  language_goals.md  macros.md  memory_management.md  open_functions.md  product_unions.md  reflection.md  syntax_consistency.md  wrapping.md
llvm_playground/: sum.c
playgrounds/llvm/: compile.sh  sum.ll
playgrounds/wasm/: add.wasm  add.wat  array.wasm  run.js  run.sh
prompts/: basic_language.md
spec/: IR.md  draft.md  list_expressions.md  node_expr_syntax_draft.md
src/: ast.rs  grammar.lalrpop  main.rs  weather.nova
src/codegen/: llvm.rs  wasm.rs
src/compiler/: wasm.rs
src/ir/: ast.rs  ir_grammar.lalrpop  parser.rs
src/parser/: ast.rs  grammar.lalrpop  parse.rs  parser.rs
src/typing/: context.rs  error.rs  expr.rs
wasm_playground/: array.wasm  array.wat  index.html  serve.sh
