[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
#inkwell = {version = "0.5.0", features = ["llvm18-0"]}
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
# wasm-encoder = "0.219.1"
# wasmtime = "25.0.2"
